[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
rh-aide-tests = []
rh-uc-tests = []
rh-panic-tests = []
rust-helpers-tests = ["rh-aide-tests","rh-uc-tests","rh-panic-tests"]
