[package]
name = "helpers"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = [ "software9119.technology" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rh-aide-tests = []
rh-uc-tests = []
rh-panic-tests = []
rust-helpers-tests = ["rh-aide-tests","rh-uc-tests","rh-panic-tests"]
